# SPDX-FileCopyrightText: 2025 Warner Zee <warner@zoynk.com>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "easy-pdf"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["Warner Zee <warner@zoynk.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/wyzzarz/easy-pdf"
readme = "README.md"
description = "Easily create PDF documents."
# up to 5 keywords having at most 20 characters each
keywords = ["pdf", "text", "layout"]
# up to 5 categories from https://crates.io/category_slugs
categories = ["text-processing"]
include = [
    "/src/**",
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/LICENSE-*",
    "/README.md",
]

[dependencies]
ascii85 = "0.2.1"
env_logger = "0.11.8"
flate2 = "1.1.2"
image = "0.25.6"
log = "0.4.27"
maplit = "1.0.2"
rust-embed = { version = "8.7.2", features = ["include-exclude", "interpolate-folder-path"] }
rust_decimal = "1.37.2"
rust_decimal_macros = "1.37.1"
tempfile = "3.20.0"
